--- a/index.css
+++ b/index.css
@@ -8,18 +8,18 @@
 
 body {
     min-height: 100vh;
-    background-image: url("https://images.pexels.com/photos/1075189/pexels-photo-1075189.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&dpr=1");
+/*     background-image: url("https://images.pexels.com/photos/1075189/pexels-photo-1075189.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&dpr=1"); */
     z-index: 100;
     transition: .7s;
-    background-position: center;
+/*     background-position: center;
     background-origin: border-box;
     object-fit: cover;
-    background-size: 100%;
+    background-size: 100%; */
 }
 
 .container-fluid {
     display: none;
-  }
+}
 
 /* Header */
 
@@ -203,6 +203,12 @@ body {
     position: absolute;
     width: 100%;
     top: 10%;
+}
+
+#video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
 
 /* Loading */
