--- a/index.css
+++ b/index.css
@@ -7,14 +7,14 @@
 }
 
 body {
-    min-height: auto;
-/*     background-image: url("https://images.pexels.com/photos/1075189/pexels-photo-1075189.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&dpr=1"); */
+    height: 100vh;
     z-index: 100;
     transition: .7s;
     background-position: center;
     background-origin: border-box;
     object-fit: cover;
     background-size: 100%;
+    overflow: hidden;
 }
 
 .container-fluid {
@@ -209,6 +209,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    overflow: hidden;
 }
 
 /* Loading */
